display reset button regardless of screen type

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>DeepFractal</title>
@@ -60,7 +60,6 @@
     #zoomOut { position: absolute; bottom: .4em; left: .4em; width: 2.3em; font-size: 1em;}
     @media screen and (min-width: 1088px) {
       #menu.is-active { position: static; width: auto; }
-      #zoomOut { display: none; }
       .supersamling-check:hover { color: #ffffff; }
     }
   </style>
