detach styles from html

--- a/index.html
+++ b/index.html
@@ -46,23 +46,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-  <style>
-    html, body { overflow: hidden; background-color: #0a0a0a; }
-    main { display: flex; flex-direction: column; height: 100vh; min-height: 100%; }
-    .viewer { flex: 1; position: relative; display: flex; flex-direction: column; background-color: #0a0a0a; }
-    #menu.is-active { position: fixed; width: 100%; top: 3.25em; }
-    .patreon-button { background-color: rgb(250, 116, 94); border-color: rgb(250, 116, 94); color: #ffffff; }
-    .patreon-button:hover { background-color: rgb(238, 109, 89); border-color: rgb(238, 109, 89); color: #ffffff;}
-    .supersamling-check:hover { color: #3273dc; }
-    canvas { position: absolute; width: 100%; height: 100%; }
-    #gljulia { left: 0; bottom: 0; height: 400px; width: 400px;}
-    #glcontrol { cursor: crosshair; }
-    #zoomOut { position: absolute; bottom: .4em; left: .4em; width: 2.3em; font-size: 1em;}
-    @media screen and (min-width: 1088px) {
-      #menu.is-active { position: static; width: auto; }
-      .supersamling-check:hover { color: #ffffff; }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
